--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-  "name": "react-webpack",
+  "name": "state-management",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "webpack.config.dev.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "webpack --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --open --hot"
+    "dev": "webpack-dev-server  --config webpack.config.dev.js --open --hot",
+    "prod": "webpack --config webpack.config.prod.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vvorkcloudtech/state-management.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "bugs": {
+    "url": "https://github.com/vvorkcloudtech/state-management/issues"
+  },
+  "homepage": "https://github.com/vvorkcloudtech/state-management#readme",
+  "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.3.1",
-    "css-loader": "^2.1.1",
+    "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-player": "^1.8.0",
     "style-loader": "^0.23.1",
-    "webpack": "^3.12.0"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.11.3"
   },
-  "devDependencies": {
-    "babel-loader": "^6.4.1",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sass-loader": "^7.1.0",
-    "webpack-dev-server": "^2.11.5"
+  "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "express": "^4.16.4",
+    "react-facebook-login": "^4.1.1",
+    "react-router-dom": "^4.3.1"
   }
 }
